@@ -19,5 +19,6 @@ extern void reset_sysfont(int x);
 extern void hide_cursor(void);
 extern void reveal_cursor(void);
 extern void osword10(int32 x);
+extern void sdl_screensave(char *fname);
 
 #endif
